# cloud-runtimes-python

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_complete.py  verify_enhanced.py  verify_modules.py  verify_native.py  verify_saas.py
.github/workflows/: ci.yml
api/: cloud_runtimes.py
api/domain/: configuration_runtimes.py  logging_runtimes.py  pubsub_runtimes.py
cloud_runtimes/: __init__.py  client.py  exceptions.py
cloud_runtimes/core/: __init__.py  binding.py  configuration.py  invocation.py  pubsub.py  secrets.py  state.py
cloud_runtimes/enhanced/: __init__.py  database.py  file.py  lock.py  telemetry.py
cloud_runtimes/native/: __init__.py  redis.py  s3.py  sql.py
cloud_runtimes/saas/: __init__.py  email.py  encryption.py  sms.py
cloud_runtimes/types/: __init__.py  common.py  core.py  enhanced.py  native.py  saas.py
tests/core/: __init__.py  test_binding.py  test_secrets.py
